--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -43,6 +43,7 @@ service mount-dynamic-rw /system/bin/mount-dynamic-rw.sh
 
 on init
     write /sys/class/backlight/panel0-backlight/brightness 200
+    start boot-hal-1-1
 
     # Create location for fs_mgr to store abbreviated output from filesystem
     # checker programs.
